Project

General

Profile

Actions

Bug #63994

closed

test_multi.test_role_sync failed

Added by Jane Zhu 4 months ago. Updated 4 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
iam multisite
Backport:
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Actions #1

Updated by Jane Zhu 4 months ago

  • Subject changed from test_multi.py:test_role_sync failed to test_multi.test_role_sync failed
  • Severity changed from 3 - minor to 2 - major
INFO create role zone=a1 name=roles-abqwiq-1
INFO create role zone=a2 name=roles-abqwiq-2
EE
======================================================================
ERROR: test_multi.test_role_sync
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/usr/local/lib/python3.6/site-packages/nose/case.py", line 198, in runTest
    self.test(*self.arg)
  File "/usr/local/lib/python3.6/site-packages/nose/util.py", line 620, in newfunc
    return func(*arg, **kw)
  File "/ceph-src/src/test/rgw/rgw_multi/tests.py", line 1697, in test_role_sync
    roles, zone_role = create_role_per_zone(zonegroup_conns)
  File "/ceph-src/src/test/rgw/rgw_multi/tests.py", line 511, in create_role_per_zone
    role = zone.create_role("", role_name, policy_document, "")
  File "/ceph-src/src/test/rgw/rgw_multi/zone_rados.py", line 130, in create_role
    return self.iam_conn.create_role(rolename, policy_document, path)
  File "/usr/local/lib/python3.6/site-packages/boto/iam/connection.py", line 1155, in create_role
    return self.get_response('CreateRole', params)
  File "/usr/local/lib/python3.6/site-packages/boto/iam/connection.py", line 102, in get_response
    raise self.ResponseError(response.status, response.reason, body)
boto.exception.BotoServerError: BotoServerError: 403 Forbidden
<?xml version="1.0" encoding="UTF-8"?><Error><Code>AccessDenied</Code><Message></Message><RequestId>tx00000828bf50d5adcce34-00659efeae-1043-a2</RequestId
><HostId>1043-a2-a</HostId></Error>

rgw logs:

2024-01-10T20:31:42.849+0000 7f44f8426700 20 req 9406881684401212980 0.004000059s iam:create_role ERROR: forward_iam_request_to_master failed with error
code: -13
2024-01-10T20:31:42.849+0000 7f44f8426700  2 req 9406881684401212980 0.004000059s iam:create_role completing
2024-01-10T20:31:42.849+0000 7f44f8426700 10 req 9406881684401212980 0.004000059s cache get: name=a2.rgw.log++script.postrequest. : hit (negative entry)
2024-01-10T20:31:42.849+0000 7f44f8426700  2 req 9406881684401212980 0.004000059s iam:create_role op status=-13
2024-01-10T20:31:42.849+0000 7f44f8426700  2 req 9406881684401212980 0.004000059s iam:create_role http status=403
2024-01-10T20:31:42.849+0000 7f44f8426700  1 ====== req done req=0x7f4498ae5790 op status=-13 http_status=403 latency=0.004000059s ======
2024-01-10T20:31:42.849+0000 7f44f8426700  1 beast: 0x7f4498ae5790: ::1 - tester [10/Jan/2024:20:31:42.845 +0000] "POST / HTTP/1.1" 403 188 - "Boto/2.49.
0 Python/3.6.8 Linux/4.18.0-305.19.1.el8_4.x86_64" - latency=0.004000059s

Potentially caused by this PR: https://github.com/ceph/ceph/pull/50599

Actions #2

Updated by Casey Bodley 4 months ago

  • Status changed from New to Fix Under Review
  • Assignee set to Casey Bodley
  • Pull request ID set to 55148
Actions #3

Updated by Casey Bodley 4 months ago

  • Status changed from Fix Under Review to Resolved
  • Tags set to iam multisite
Actions

Also available in: Atom PDF