rgw: fix use of creds in forward_iam_request()

variable `creds` was moved into the `RGWRESTConn` constructor before being
passed into `forward_iam_request()`. change `forward_iam_request()` so
it uses the member variable from the constructor instead of taking it as
an argument

Fixes: https://tracker.ceph.com/issues/63994

Signed-off-by: Casey Bodley <cbodley@redhat.com>